--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,11 @@
 
 body {
   margin: 0px;
-  color: #333;
+  color: #eee;
   --type-first: Helvetica, Arial, sans-serif;
   --type-second: "Spectral", georgia;
   font-family: var(--type-first);
-  padding-top: 4rem;
+  background-color: #333;
 }
 
 h1,
@@ -51,6 +51,15 @@ input {
   margin-top: 2rem;
 }
 
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: fixed;
+  top: 1rem;
+  width: 100%;
+}
+
 a {
   text-decoration: none;
   color: #333;
@@ -81,7 +90,9 @@ a {
 .app {
   display: flex;
   flex-direction: column;
-  min-height: calc(100vh + 10rem);
+  min-height: 100vh;
+  flex-direction: row;
+  align-items: center;
 }
 
 .appBody {
